# dutyroll

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  setup.py  test_dutyroll.py
dutyroll/: __init__.py
src/: python_wrappers.cpp  rollduty.cpp  rollduty.hpp
